<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Red</string>
    <string name="receive_notifications_from">Recibir notificaciones de:</string>
    <string name="offers_and_promotions">Ofertas y promociones</string>
    <string name="offers_and_promotions_key">offers_and_promotions_key</string>
    <string name="sign_off">Cerrar sesión</string>
    <string name="wait_a_moment" tools:ignore="Typos">Espere un momento…</string>
    <string name="new_package">Nuevo paquete</string>
    <string name="add">Agregar</string>
    <string name="add_package">Agregar paquete</string>
    <string name="delete">Eliminar</string>
    <string name="removed">eliminado</string>
    <string name="delete_contract">¿Eliminar contrato?</string>
    <string name="update">Actualizar</string>
    <string name="update_package">Actualizar paquete</string>
    <string name="are_you_sure_to_take_this_action">¿Está seguro de realizar esta acción?</string>
    <string name="cancel">Cancelar</string>
    <string name="add_more_images">Agregar más imágenes</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="speed">Velocidad</string>
    <string name="limit">Límite</string>
    <string name="available">Disponibles</string>
    <string name="validity">Vigencia</string>
    <string name="error_uploading_image">Error al subir imagen.</string>
    <string name="package_added">Paquete agregado.</string>
    <string name="package_updated">Paquete actualizado.</string>
    <string name="failed_to_add_package">Error al agregar el paquete.</string>
    <string name="failed_to_update_package">Error al actualizar el paquete.</string>
    <string name="write_a_message">Escribe un mensaje…</string>
    <string name="technical_support">Soporte técnico</string>
    <string name="contract">Contrato</string>
    <string name="my_contracts">Mis contratos</string>
    <string name="error_loading_chat_messages">Error al cargar los mensajes del chat.</string>
    <string name="error_clearing_message">Error al eliminar el mensaje.</string>
    <string name="message_deleted">Mensaje borrado exitosamente.</string>
    <string name="status">Estado</string>
    <string name="contract_id">ID de Contrato: %1$s</string>
    <string name="contract_id_text_only">ID de Contrato</string>
    <string name="need_help">¿Necesitas ayuda?</string>
    <string name="total_price">Precio total: $%1$d MXN</string>
    <string name="failed_to_query_the_data">Error al consultar los datos.</string>
    <string name="failed_to_update_contract">Error al actualizar el contrato.</string>
    <string name="updated_contract">Contrato actualizado exitosamente.</string>
    <string name="contract_status_on_hold">En espera…</string>
    <string name="contract_status_activated">Activado</string>
    <string name="contract_status_timed_out">Caducado</string>
    <string name="send_message">Enviar mensaje</string>
    <string name="unknown">Desconocido</string>
    <string name="failed_to_delete_image">Error al eliminar la imagen.</string>
    <string name="failed_to_remove_package">Error al eliminar el paquete.</string>
    <string name="failed_to_log_out">Error al cerrar sesión.</string>
    <string name="see_you_soon">Nos vemos pronto…</string>
    <string name="error_code">Código de error</string>
    <string name="uploading_image">Subiendo imagen…</string>
    <string name="images_uploaded_successfully">Imágenes subidas correctamente.</string>
    <string name="image_upload_error">Error al subir la imagen.</string>
    <string name="welcome">Te damos la bienvenida a Red</string>
    <string name="welcome_user">Bienvenido</string>
    <string name="you_have_logged_out">Has cerrado sesión.</string>
    <string name="of">de</string>
    <string name="title">Título</string>
    <string name="topic">Tema/Tópico</string>
    <string name="new_promotion">Nueva promoción</string>
    <string name="promotion_sent_to_all_users">Promoción enviada a usuarios suscritos.</string>
    <string name="failed_to_send_the_promotion">Error al enviar la promoción.</string>
    <string name="empty_list">Lista vacía</string>
    <string name="package_service_view_contract_list">Ver lista</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_phone">Teléfono</string>
    <string name="or">O</string>
    <string name="you_do_not_have_an_account">¿No tienes cuenta?… Selecciona un método de autenticación para crear una.</string>
    <string name="settings">Configuración</string>
    <string name="contract_list">Lista de contratos</string>
    <string name="add_to_the_list">Agregar a la lista</string>
    <string name="detail_total_price">&lt;b>&lt;big>Total: $%1$d MXN&lt;/big>&lt;/b>&lt;br/>(%2$d x $%3$d)</string>
    <string name="detail_available">Disponibles: %1$d</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="view_status">Ver estado</string>
    <string name="requested_contract_status">Estado: %1$s</string>
    <string name="requested_contract_id">ID de Contrato: %1$s</string>
    <string name="package_service_full_contract_list">Precio total: $%1$d MXN</string>
    <string name="my_profile">Mi perfil</string>
    <string name="main_topic">new_offer_and_promotion</string>
    <string name="notifications_activated">Notificaciones activadas.</string>
    <string name="notifications_disabled">Notificaciones desactivadas.</string>
    <string name="requested_contracts_successfully">Contrato(s) solicitados exitosamente.</string>
    <string name="request_contracts">Solicitar contrato(s)</string>
    <string name="error_requesting_contracts">Error al solicitar contratos.</string>
    <string name="error_when_consulting_this_contract">Error al consultar este contrato.</string>
    <string name="contract_status">Estado del contrato</string>
    <string name="notification_channel_id_default">custom</string>
    <string name="notification_channel_name_default">Personalizadas</string>
    <string name="network_error_check_your_connection">Error de red, verifique su conexión.</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="facebook_application_id" translatable="false">278337960816104</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb278337960816104</string>
    <string name="months">meses</string>
    <string name="edited_profile_successfully">Perfil editado exitosamente.</string>
    <string name="error_editing_profile_with_firebase_ui">Error al editar el perfil con Firebase AuthUI.</string>
    <string name="error_editing_profile_with_firebase_firestore">Error al editar el perfil con Firebase Firestore.</string>
    <string name="this_field_is_required">Este campo es obligatorio.</string>
    <string name="discount_from">Descuento del</string>
    <string name="yes">Sí</string>
    <string name="search">Buscar</string>
    <string name="search_by_name">Buscar por nombre…</string>
    <string name="search_by_id">Buscar por ID…</string>
    <string name="failed_to_get_the_last_modification">Error al obtener la última modificación.</string>
    <string name="last_update">Última actualización</string>
    <string name="without_results">Sin resultados.</string>
    <string name="subscriber_number">Número de suscriptor</string>
    <string name="you_cannot_contract_more_than_5_packages_of_the_same_type">No puedes contratar más de 5 paquetes del mismo tipo.</string>
    <string name="the_quantity_cannot_be_zero">La cantidad no puede ser 0.</string>
    <string name="current_version">Versión: 1.0</string>
    <string name="copyright">© Octubre - 2021</string>
    <string name="developed_by">Desarrollado por</string>
    <string name="eduardo">👨‍💻 Eduardo López Villegas</string>
    <string name="antonio">👨‍💻 Jesús Antonio García Zamudio</string>
    <string name="manuel">👨‍💻 Edgar Manuel Velázquez Valdes</string>
    <string name="about">Acerca de</string>
    <string name="sending_email">Enviando correo electrónico…</string>
    <string name="wait_a_moment_please" tools:ignore="Typos">Por favor, espere un momento…</string>
    <string name="email_sent_successfully">Correo electrónico enviado con éxito.</string>
    <string name="send">Enviar</string>
    <string name="message">Mensaje</string>
    <string name="email">Correo electrónico</string>
    <string name="subject">Asunto</string>
    <string name="complain">Queja</string>
    <string name="suggestion">Sugerencia</string>
    <string name="use_another_email">Utilizar otro correo electrónico</string>
    <string name="post_comments">Enviar comentarios</string>
    <string name="you_must_select_the_subject_type">Debe seleccionar el tipo de asunto.</string>
    <string name="error_sending_email">Error al enviar correo electrónico.</string>
    <string name="you_have_connection">Tienes conexión.</string>
    <string name="no_network_connection">Sin conexión de red.</string>
    <string name="go_to_settings">Ir a configuración</string>
</resources>