<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_offers_and_promotions"
        android:icon="@drawable/ic_store"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/my_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_requested_contract_history"
        android:icon="@drawable/ic_history_contracts"
        android:title="@string/my_contracts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_off"
        android:title="@string/sign_off"
        app:showAsAction="never" />
</menu>