<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProgress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_padding_default"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_min"
            android:layout_marginBottom="@dimen/contract_status_margin_bottom_progress"
            app:indicatorColor="?colorSecondaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackCornerRadius="@dimen/common_padding_max"
            tools:progress="50" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbOnHold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:buttonTint="?colorSecondaryVariant"
        android:text="@string/contract_status_on_hold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="@id/clProgress"
        app:layout_constraintStart_toStartOf="@id/clProgress"
        app:layout_constraintTop_toTopOf="@id/clProgress" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:buttonTint="?colorSecondaryVariant"
        android:text="@string/contract_status_activated"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toTopOf="@id/cbTimedOut"
        app:layout_constraintEnd_toEndOf="@id/clProgress"
        app:layout_constraintStart_toStartOf="@id/clProgress"
        app:layout_constraintTop_toBottomOf="@id/cbOnHold" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbTimedOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_check_box"
        android:buttonTint="?colorSecondaryVariant"
        android:text="@string/contract_status_timed_out"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@id/clProgress"
        app:layout_constraintEnd_toEndOf="@id/clProgress"
        app:layout_constraintStart_toStartOf="@id/clProgress" />
</androidx.constraintlayout.widget.ConstraintLayout>